# zaroxi

./: .aider.conf.yml  .aiderignore  .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONVENTIONS.md  Cargo.toml  EDITOR_FIX_NOTES.md  README.md  clippy.toml  create_crates.py  deny.toml  flake.nix  justfile  package.json  rust-analyzer.toml
apps/zaroxi-desktop-harness/: Cargo.toml
apps/zaroxi-desktop-harness/src/: main.rs
apps/zaroxi-desktop-harness/tests/: ai_flow.rs  durability.rs
crates/zaroxi-app/: Cargo.toml
crates/zaroxi-app/src/: app.rs  commands.rs  layout.rs  lib.rs  panels.rs  status.rs  tabs.rs
crates/zaroxi-application-ai/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-application-ai/src/: action_service.rs  agent_orchestrator.rs  background_task_service.rs  context_collector.rs  diff_applier.rs  edit_flow_service.rs  lib.rs  mcp_client.rs  mcp_service.rs  mock.rs  panel.rs  ports.rs  provider_registry.rs  service.rs  session_manager.rs  trace.rs  view_model.rs
crates/zaroxi-application-ai/tests/: explain.rs  service_tests.rs
crates/zaroxi-application-bootstrap/: Cargo.toml
crates/zaroxi-application-bootstrap/src/: lib.rs
crates/zaroxi-application-plugin/: Cargo.toml
crates/zaroxi-application-plugin/src/: lib.rs
crates/zaroxi-core-editor-buffer/: Cargo.toml
crates/zaroxi-core-editor-buffer/.migrated_from/: zaroxi-domain-buffer__Cargo.toml
crates/zaroxi-core-editor-buffer/src/: buffer.rs  lib.rs  ports.rs
crates/zaroxi-core-editor-buffer/tests/: dirty.rs  history.rs
crates/zaroxi-core-editor-largefile/: Cargo.toml
crates/zaroxi-core-editor-largefile/src/: lib.rs  piece_table.rs
crates/zaroxi-core-editor-view/: Cargo.toml
crates/zaroxi-core-editor-view/src/: lib.rs  render_contract.rs  view.rs
crates/zaroxi-core-engine-layout/: Cargo.toml
crates/zaroxi-core-engine-layout/src/: layout.rs  lib.rs  shell_layout_input.rs
crates/zaroxi-core-engine-layout/tests/: layout_input_translation.rs
crates/zaroxi-core-engine-render/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-engine-render-backend/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-engine-render-backend/src/: lib.rs  vello_layer.rs
crates/zaroxi-core-engine-render/.migrated_from/: zaroxi-core-render-ui__Cargo.toml.bak
crates/zaroxi-core-engine-render/src/: consistency.rs  debug_color_shader.wgsl  intent.rs  lib.rs  plan.rs  shape_shader.wgsl  shell_text_renderer.rs  text_seam.rs  text_shader.wgsl  transcript.rs
crates/zaroxi-core-engine-render/tests/: backend_integration.rs  chrome_conversion.rs  consistency_test.rs  intent_from_layout.rs  plan_from_intent.rs  plan_seam_integration.rs  shell_text_renderer.rs  text_seam_integration.rs  transcript_tests.rs
crates/zaroxi-core-engine-scene/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-engine-scene/src/: lib.rs  scene.rs  text_span.rs
crates/zaroxi-core-engine-scene/tests/: translation.rs
crates/zaroxi-core-engine-text/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-engine-text/src/: backend.rs  label.rs  lib.rs
crates/zaroxi-core-engine-text/tests/: seam.rs
crates/zaroxi-core-engine-ui/: Cargo.toml
crates/zaroxi-core-engine-ui/src/: bar.rs  blocks.rs  chrome.rs  composer.rs  composite.rs  content.rs  interaction.rs  layout.rs  layout_constants.rs  lib.rs  primitives.rs  scene.rs  shell_builder.rs  syntax_tokenizer.rs  ui.rs  widgets.rs  work_content.rs
crates/zaroxi-core-engine-ui/tests/: interaction_tests.rs  layout_tests.rs  shell_surface_tests.rs  widget_tree_tests.rs
crates/zaroxi-core-ids/: Cargo.toml
crates/zaroxi-core-ids/src/: lib.rs
crates/zaroxi-core-platform-git/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-platform-git/src/: diff.rs  lib.rs  repo.rs
crates/zaroxi-core-platform-lsp/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-platform-lsp/src/: client.rs  lib.rs  session.rs  trace.rs
crates/zaroxi-core-platform-syntax/: Cargo.toml  Cargo.toml.bak  build.rs
crates/zaroxi-core-platform-syntax/src/: cache.rs  dynamic_loader.rs  error.rs  grammar_builder.rs  grammar_registry.rs  highlight.rs  language.rs  lib.rs  manager.rs  parser.rs  query_cache.rs  runtime.rs  symbols.rs  theme_map.rs  theme_shim.rs  timing.rs
crates/zaroxi-core-platform-syntax/tests/: highlight_spans.rs  language_detection.rs  runtime_resolution.rs
crates/zaroxi-core-platform-terminal/: Cargo.toml
crates/zaroxi-core-platform-terminal/src/: config.rs  input.rs  lib.rs  palette.rs  render_model.rs  session.rs  view_model.rs
crates/zaroxi-core-platform-terminal/tests/: session_lifecycle.rs
crates/zaroxi-core-plugin-runtime/: Cargo.toml
crates/zaroxi-core-plugin-runtime/src/: lib.rs
crates/zaroxi-core-render/: Cargo.toml
crates/zaroxi-core-render/src/: lib.rs  surface.rs  text_shader.wgsl
crates/zaroxi-core-runtime/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-runtime/src/: lib.rs  runtime.rs
crates/zaroxi-core-state/: Cargo.toml
crates/zaroxi-core-state/src/: lib.rs
crates/zaroxi-core-telemetry/: Cargo.toml
crates/zaroxi-core-telemetry/src/: buffer_activity.rs  lib.rs  memory.rs
crates/zaroxi-core-text/: Cargo.toml
crates/zaroxi-core-text/src/: lib.rs
crates/zaroxi-core-workspace-files/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-core-workspace-files/src/: file_loader.rs  lib.rs  workspace.rs
crates/zaroxi-core-workspace-files/zaroxi-workspace/: Cargo.toml
crates/zaroxi-domain-ai/: Cargo.toml  Cargo.toml.bak
crates/zaroxi-domain-editor/: Cargo.toml  Cargo.toml.bak
docs/: Cargo.toml  GAPS.md  INSTALL_MACOS.md  MISSING_FILES.md  README.md  ai-and-editor-flows.md  architecture.md  crates.md  development.md  roadmap.md  rpc.md  runtime-and-rendering.md  security.md  system-context.md  testing-and-quality.md  text.txt  workspace-structure.md
docs/decisions/: 0001-pure-rust-native-desktop-stack.md  0002-layered-crate-architecture.md  0003-unsafe-forbidden-with-documented-exceptions.md  0004-committed-tree-sitter-grammar-runtime.md  0005-ci-as-architecture-enforcement.md  README.md  template.md
docs/src/: lib.rs
(+871 files in other folders)
