[workspace]
resolver = "2"
members = [
  # KERNEL
  "crates/zaroxi-kernel-core",
  "crates/zaroxi-kernel-types",
  "crates/zaroxi-kernel-errors",
  "crates/zaroxi-kernel-memory",
  "crates/zaroxi-kernel-async",
  "crates/zaroxi-kernel-time",
  "crates/zaroxi-kernel-math",
  "crates/zaroxi-kernel-collections",
  "crates/zaroxi-kernel-traits",
  "crates/zaroxi-kernel-config",
  "crates/zaroxi-kernel-protocol",

  # CORE ENGINE
  "crates/zaroxi-core-engine-root",
  "crates/zaroxi-core-engine-runtime",
  "crates/zaroxi-core-engine-state",
  "crates/zaroxi-core-engine-window",
  "crates/zaroxi-core-engine-input",
  "crates/zaroxi-core-engine-action",
  "crates/zaroxi-core-engine-focus",
  "crates/zaroxi-core-engine-layout",
  "crates/zaroxi-core-engine-style",
  "crates/zaroxi-core-engine-element",
  "crates/zaroxi-core-engine-view",
  "crates/zaroxi-core-engine-scene",
  "crates/zaroxi-core-engine-overlay",
  "crates/zaroxi-core-engine-text",
  "crates/zaroxi-core-engine-font",
  "crates/zaroxi-core-engine-render",
  "crates/zaroxi-core-engine-render-backend",
  "crates/zaroxi-core-engine-render-resource",
  "crates/zaroxi-core-engine-render-pipeline",
  "crates/zaroxi-core-engine-render-graph",
  "crates/zaroxi-core-engine-compositor",
  "crates/zaroxi-core-engine-animation",
  "crates/zaroxi-core-engine-clipboard",
  "crates/zaroxi-core-engine-ime",
  "crates/zaroxi-core-engine-accessibility",
  "crates/zaroxi-core-engine-test",

  # CORE EDITOR
  "crates/zaroxi-core-editor-buffer",
  "crates/zaroxi-core-editor-rope",
  "crates/zaroxi-core-editor-model",
  "crates/zaroxi-core-editor-transaction",
  "crates/zaroxi-core-editor-selection",
  "crates/zaroxi-core-editor-cursor",
  "crates/zaroxi-core-editor-history",
  "crates/zaroxi-core-editor-display",
  "crates/zaroxi-core-editor-decoration",
  "crates/zaroxi-core-editor-folding",
  "crates/zaroxi-core-editor-gutter",
  "crates/zaroxi-core-editor-diagnostics",
  "crates/zaroxi-core-editor-minimap",
  "crates/zaroxi-core-editor-command",
  "crates/zaroxi-core-editor-viewport",
  "crates/zaroxi-core-editor-inline-ai",
  "crates/zaroxi-core-editor-view",
  "crates/zaroxi-core-editor-collab",

  # CORE WORKSPACE
  "crates/zaroxi-core-workspace-files",
  "crates/zaroxi-core-workspace-index",
  "crates/zaroxi-core-workspace-history",
  "crates/zaroxi-core-workspace-patch",
  "crates/zaroxi-core-workspace-watcher",
  "crates/zaroxi-core-workspace-cache",
  "crates/zaroxi-core-workspace-snapshot",
  "crates/zaroxi-core-workspace-permissions",

  # CORE PLATFORM
  "crates/zaroxi-core-platform-runtime",
  "crates/zaroxi-core-platform-lsp",
  "crates/zaroxi-core-platform-syntax",
  "crates/zaroxi-core-platform-debugger",
  "crates/zaroxi-core-platform-terminal",
  "crates/zaroxi-core-platform-git",
  "crates/zaroxi-core-platform-test",
  "crates/zaroxi-core-platform-profiler",
  "crates/zaroxi-core-platform-formatter",
  "crates/zaroxi-core-platform-linter",
  "crates/zaroxi-core-platform-plugin",
  "crates/zaroxi-core-platform-remote-ssh",
  "crates/zaroxi-core-platform-remote-container",

  # CORE RUNTIME (shared core infra)
  "crates/zaroxi-core-runtime",
  "crates/zaroxi-core-scheduler",
  "crates/zaroxi-core-task",
  "crates/zaroxi-core-threading",
  "crates/zaroxi-core-state",
  "crates/zaroxi-core-io",
  "crates/zaroxi-core-sync",
  "crates/zaroxi-core-input",
  "crates/zaroxi-core-event",
  "crates/zaroxi-core-commands",
  "crates/zaroxi-core-telemetry",
  "crates/zaroxi-core-plugin-runtime",

  # DOMAIN
  "crates/zaroxi-domain-workspace",
  "crates/zaroxi-domain-project",
  "crates/zaroxi-domain-settings",
  "crates/zaroxi-domain-session",
  "crates/zaroxi-domain-ai",
  "crates/zaroxi-domain-plugin",
  "crates/zaroxi-domain-collaboration",

  # APPLICATION
  "crates/zaroxi-application-editor",
  "crates/zaroxi-application-workspace",
  "crates/zaroxi-application-project",
  "crates/zaroxi-application-command",
  "crates/zaroxi-application-search",
  "crates/zaroxi-application-navigation",
  "crates/zaroxi-application-refactor",
  "crates/zaroxi-application-ai",
  "crates/zaroxi-application-plugin",
  "crates/zaroxi-application-remote",
  "crates/zaroxi-application-collaboration",

  # INTELLIGENCE
  "crates/zaroxi-intelligence-agent",
  "crates/zaroxi-intelligence-planning",
  "crates/zaroxi-intelligence-memory",
  "crates/zaroxi-intelligence-context",
  "crates/zaroxi-intelligence-tools",
  "crates/zaroxi-intelligence-orchestrator",
  "crates/zaroxi-intelligence-eval",
  "crates/zaroxi-intelligence-embedding",
  "crates/zaroxi-intelligence-safety",

  # INFRASTRUCTURE
  "crates/zaroxi-infrastructure-rpc",
  "crates/zaroxi-infrastructure-http",
  "crates/zaroxi-infrastructure-storage",
  "crates/zaroxi-infrastructure-settings",
  "crates/zaroxi-infrastructure-permissions",
  "crates/zaroxi-infrastructure-logging",
  "crates/zaroxi-infrastructure-metrics",
  "crates/zaroxi-infrastructure-tracing",
  "crates/zaroxi-infrastructure-network",
  "crates/zaroxi-infrastructure-process",
  "crates/zaroxi-infrastructure-ssh",
  "crates/zaroxi-infrastructure-container",

  # SECURITY
  "crates/zaroxi-security-sandbox",
  "crates/zaroxi-security-policy",
  "crates/zaroxi-security-validation",
  "crates/zaroxi-security-auth",
  "crates/zaroxi-security-audit",
  "crates/zaroxi-security-crypto",

  # INTERFACE
  "crates/zaroxi-interface-app",
  "crates/zaroxi-interface-desktop",
  "crates/zaroxi-interface-cli",
  "crates/zaroxi-interface-theme",

  # TOOLING & DOCS
  "tools/crate-lint",
  "docs",
]

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT"

[workspace.dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "process",
  "sync",
  "io-util",
  "time",
] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
tree-sitter = "0.26.8"
parking_lot = "0.12"
once_cell = "1.20"
log = "0.4"
env_logger = "0.11"

# Note:
# The workspace above strictly follows the FINAL CRATE INVENTORY:
# - Flat layout under crates/
# - All crate names use the mandated prefixes
# - No nested crates
# Individual crate Cargo.toml and src/lib.rs will be generated by tools/create_crates.py
