[package]
name = "zaroxi-desktop-harness"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }

# Application and interface crates (workspace members)
zaroxi-interface-desktop = { path = "../../crates/zaroxi-interface-desktop" }
zaroxi-interface-app = { path = "../../crates/zaroxi-interface-app" }
zaroxi-application-workspace = { path = "../../crates/zaroxi-application-workspace" }
zaroxi-application-ai = { path = "../../crates/zaroxi-application-ai" }
zaroxi-domain-workspace = { path = "../../crates/zaroxi-domain-workspace" }
zaroxi-core-editor-buffer = { path = "../../crates/zaroxi-core-editor-buffer" }

# Infrastructure adapters (outer composition references infra implementations)
zaroxi-infrastructure-ai-mock = { path = "../../crates/zaroxi-infrastructure-ai-mock" }
zaroxi-infrastructure-memory = { path = "../../crates/zaroxi-infrastructure-memory" }
