[package]
name = "zaroxi-desktop-harness"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
# Use workspace tokio pin (features centralized in workspace).
# Validation (after applying workspace unification): run `cargo update && cargo check && ./scripts/architecture_check.sh`
tokio = { workspace = true }

# Application and interface crates (workspace members)
zaroxi-interface-desktop = { path = "../../crates/zaroxi-interface-desktop" }
zaroxi-interface-app = { path = "../../crates/zaroxi-interface-app" }
zaroxi-interface-theme = { path = "../../crates/zaroxi-interface-theme" }
zaroxi-application-workspace = { path = "../../crates/zaroxi-application-workspace" }
zaroxi-application-ai = { path = "../../crates/zaroxi-application-ai" }
zaroxi-domain-workspace = { path = "../../crates/zaroxi-domain-workspace" }
zaroxi-core-editor-buffer = { path = "../../crates/zaroxi-core-editor-buffer" }

# Infrastructure adapters (outer composition references infra implementations)
zaroxi-infrastructure-ai-mock = { path = "../../crates/zaroxi-infrastructure-ai-mock" }
zaroxi-infrastructure-memory = { path = "../../crates/zaroxi-infrastructure-memory" }

# Dev-only dependency for the relocated composition integration tests
# (tests/ai_flow.rs, tests/durability.rs). All other crates these tests use
# (application-workspace, application-ai, domain-workspace, core-editor-buffer,
# infrastructure-memory, infrastructure-ai-mock, tokio) are already normal
# dependencies above; only kernel-types is additionally needed by the tests.
[dev-dependencies]
zaroxi-kernel-types = { path = "../../crates/zaroxi-kernel-types" }

[lints]
workspace = true
