[package]
name = "zaroxi-application-ai"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Application layer orchestration for AI features: copilots, assistants and agent orchestration."

[lib]
name = "zaroxi_application_ai"
path = "src/lib.rs"

[dependencies]
zaroxi-intelligence-agent = { path = "../zaroxi-intelligence-agent" }
zaroxi-domain-ai = { path = "../zaroxi-domain-ai" }
zaroxi-infrastructure-rpc = { path = "../zaroxi-infrastructure-rpc" }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }

[features]
default = []
