[package]
name = "zaroxi-application-plugin"
version.workspace = true
edition = "2024"
license.workspace = true
description = "Application-level plugin abstractions and registration helpers (high-level orchestration layer)."
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_application_plugin"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }

[features]
default = []
