[package]
name = "zaroxi-core-editor-buffer"
version = "0.1.0"
edition = "2024"
description = "In-memory document buffer primitives for the editor."
license = "MIT"

[dependencies]
# Add crate-specific dependencies when replacing stubbed manifests.
# Serde is required by src/ports.rs for Serialize/Deserialize derives.
serde = { workspace = true }
zaroxi-kernel-id = { workspace = true }

[lints]
workspace = true
