[package]
name = "zaroxi-core-editor-largefile"
version = "0.1.0"
edition = "2024"
description = "Large-file document access: streaming read-only (StreamedDocument) and editable piece-table (PieceTable)"
license = "MIT"

[dependencies]
memchr = { workspace = true }
ropey = { workspace = true }

[lints]
workspace = true
