[package]
name = "zaroxi-core-editor-view"
version = "0.1.0"
edition = "2024"
description = "Editor view composition helpers (non-UI)."
license = "MIT"

[dependencies]
zaroxi-core-editor-gutter = { path = "../zaroxi-core-editor-gutter" }
zaroxi-core-editor-viewport = { path = "../zaroxi-core-editor-viewport" }
zaroxi-kernel-math = { path = "../zaroxi-kernel-math" }
