[package]
name = "zaroxi-core-engine-layout"
version = "0.1.0"
edition = "2024"
description = "Layout algorithms for the Zaroxi engine."
license = "MIT"

[dependencies]
# Engine-internal workspace deps — the workspace root is the single source of truth.
zaroxi-core-engine-scene = { workspace = true }
zaroxi-kernel-math = { workspace = true }
