[package]
name = "zaroxi-core-engine-render-backend"
version = "0.1.0"
edition = "2024"
description = "Backend-specific renderer adapters."
license = "MIT"

[dependencies]
wgpu = { workspace = true }
vello = { workspace = true }
winit = { workspace = true }
zaroxi-core-engine-window = { path = "../zaroxi-core-engine-window" }
zaroxi-core-engine-layout = { path = "../zaroxi-core-engine-layout" }
zaroxi-kernel-math = { path = "../zaroxi-kernel-math" }
zaroxi-core-engine-font = { path = "../zaroxi-core-engine-font" }
zaroxi-core-engine-scene = { path = "../zaroxi-core-engine-scene" }
zaroxi-core-engine-ui = { path = "../zaroxi-core-engine-ui" }
bytemuck = "1.13"
