[package]
name = "zaroxi-core-engine-render-backend"
version = "0.1.0"
edition = "2024"
description = "Backend-specific renderer adapters."
license = "MIT"

[dependencies]
wgpu = { workspace = true }
vello = { workspace = true }
winit = { workspace = true }
zaroxi-core-engine-window = { workspace = true }
zaroxi-core-engine-layout = { workspace = true }
zaroxi-kernel-math = { workspace = true }
zaroxi-core-engine-font = { workspace = true }
zaroxi-core-engine-scene = { workspace = true }
zaroxi-core-engine-text = { workspace = true }
bytemuck = { workspace = true }
