[package]
name = "zaroxi-core-engine-render"
version = "0.1.0"
edition = "2024"
description = "Rendering coordination for the engine."
license = "MIT"

# Minimal crate-specific dependency for the tiny render-intent conversion.
# Use the workspace member so versions are pinned at the workspace level.
[dependencies]
zaroxi-core-engine-layout = { path = "../zaroxi-core-engine-layout" }
zaroxi-core-engine-scene = { path = "../zaroxi-core-engine-scene" }

# Feature gate for the heavy renderer/surface modules. By default the crate
# compiles only the lightweight intent module so tests and CI can run on
# environments that don't have GPU/windowing dependencies installed.
[features]
default = []
full_renderer = []
