[package]
name = "zaroxi-core-engine-render"
version = "0.1.0"
edition = "2024"
description = "Rendering coordination for the engine."
license = "MIT"

# Core internal workspace dependencies
[dependencies]
zaroxi-core-engine-layout = { path = "../zaroxi-core-engine-layout" }
zaroxi-core-engine-scene = { path = "../zaroxi-core-engine-scene" }
zaroxi-core-engine-text = { path = "../zaroxi-core-engine-text" }
zaroxi-core-engine-font = { path = "../zaroxi-core-engine-font" }

# Native rendering & windowing (workspace pins where available)
wgpu = { workspace = true }
winit = { workspace = true }

# Utilities and crates used by the full renderer
log = { workspace = true }
thiserror = { workspace = true }
bytemuck = { workspace = true }

# Cosmic Text (primary text/layout backend) - workspace pin
cosmic-text = { workspace = true }

# Glyphon is an optional native backend used by the full renderer implementation.
# Keep a concrete version here; it is only required when `full_renderer` is enabled.
glyphon = "0.11.0"

# Local workspace crates used by the renderer for app state & theme tokens.
# These are path dependencies so the crate names declared inside those Cargo.toml
# files provide the actual import names used in the Rust sources.
zaroxi-app = { path = "../zaroxi-interface-app" }
zaroxi-theme = { path = "../zaroxi-interface-theme" }

# Feature gate for the heavy renderer/surface modules. By default the crate
# compiles only the lightweight intent module so tests and CI can run on
# environments that don't have GPU/windowing dependencies installed.
[features]
default = []
full_renderer = [
    "wgpu",
    "winit",
    "glyphon",
    "cosmic-text",
    "log",
    "thiserror",
    "bytemuck",
    "zaroxi-app",
    "zaroxi-theme",
]
