[package]
name = "zaroxi-core-engine-render"
version = "0.1.0"
edition = "2024"
description = "Rendering coordination for the engine."
license = "MIT"

# Core internal workspace dependencies
[dependencies]
zaroxi-core-engine-layout = { workspace = true }
zaroxi-core-engine-scene = { workspace = true }
zaroxi-core-engine-text = { workspace = true }
zaroxi-core-engine-font = { workspace = true }

# Native rendering & windowing (workspace pins where available)
wgpu = { workspace = true, optional = true }
winit = { workspace = true, optional = true }

# Utilities and crates used by the full renderer
log = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }

# Cosmic Text (primary text/layout backend) - workspace pin (optional for feature gating)
cosmic-text = { workspace = true, optional = true }

# Glyphon optional native backend used by the full renderer implementation.
glyphon = { workspace = true, optional = true }

# Local workspace crates used by the renderer for app state & theme tokens.
# Mark them optional so they can be enabled by the `full_renderer` feature.
zaroxi-interface-theme = { workspace = true, optional = true }

# Feature gate for the heavy renderer/surface modules. By default the crate
# compiles only the lightweight intent module so tests and CI can run on
# environments that don't have GPU/windowing dependencies installed.
[features]
default = []
full_renderer = [
    "wgpu",
    "winit",
    "glyphon",
    "cosmic-text",
    "log",
    "thiserror",
    "bytemuck",
    "zaroxi-interface-theme",
]
