[package]
name = "zaroxi-core-engine-scene"
version = "0.1.0"
edition = "2024"
publish = false
description = "Scene graph management for engine rendering."
license = "MIT"

[dependencies]
zaroxi-core-engine-view = { path = "../zaroxi-core-engine-view" }
zaroxi-core-engine-text = { path = "../zaroxi-core-engine-text" }

# Local developer notes:
# To validate this crate run:
#   cargo test -p zaroxi-core-engine-scene
# Recommended further validation:
#   cargo test -p zaroxi-core-engine-view
#   cargo test -p zaroxi-interface-app
#   cargo test -p zaroxi-interface-desktop
#   cargo run -p zaroxi-desktop-harness
#   bash scripts/architecture_check.sh
