[package]
name = "zaroxi-core-engine-text"
version = "0.1.0"
edition = "2024"
description = "Engine text shaping and rendering primitives."
license = "MIT"

[dependencies]
# Glyphon remains an optional, feature-gated backend. Keep it isolated here behind
# the `glyphon_backend` feature so workspace default builds do not pull Glyphon.
glyphon = { version = "0.11.0", optional = true }

[features]
default = []
glyphon_backend = ["glyphon"]
