[package]
name = "zaroxi-core-engine-text"
version = "0.1.0"
edition = "2024"
description = "Engine text shaping and rendering primitives."
license = "MIT"

[dependencies]
# Workspace engine crates required for Phase 5 editor-text rendering.
zaroxi-core-engine-font = { workspace = true }
zaroxi-core-engine-scene = { workspace = true }

[features]
default = []

[lints]
workspace = true
