[package]
name = "zaroxi-core-ids"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Strongly-typed identifiers for Zaroxi Studio (deprecated wrapper)"
authors = ["Zaroxi Team"]
repository = "https://github.com/zaroxi/zaroxi"
readme = "README.md"
rust-version = "1.85.0"

[lib]
name = "zaroxi_core_ids"
path = "src/lib.rs"

[dependencies]
zaroxi-foundation = { path = "../zaroxi-foundation" }
serde = { workspace = true, features = ["derive"] }

[features]
default = []
