[package]
name = "zaroxi-core-platform-git"
version = "0.1.0"
edition = "2024"
description = "Git VCS integration adapters."
license = "MIT"

[dependencies]
# Dependency-free at runtime: diffing is pure Rust and git access shells out to
# the system `git` CLI, keeping the crate light and portable.

[dev-dependencies]
tempfile = { workspace = true }
