[package]
name = "zaroxi-core-platform-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol integration layer."
license = "MIT"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
lsp-types = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
